--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-validator": "^5.3.0",
     "file-extension": "^4.0.5",
     "fs": "0.0.1-security",
+    "html-pdf": "^2.2.0",
     "http": "0.0.0",
     "jade": "^1.11.0",
     "jsonwebtoken": "^8.4.0",
@@ -44,7 +45,9 @@
     "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^1.19.1",
     "path": "^0.12.7",
+    "promise-ftp": "^1.3.5",
     "serve-favicon": "^2.5.0",
+    "ssh2-sftp-client": "^5.0.1",
     "underscore": "^1.9.1",
     "url": "^0.11.0"
   }
